[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sounds/explosion.wav" type="AudioStream" id=1]
[ext_resource path="res://Assets/images/bomb.png" type="Texture" id=2]
[ext_resource path="res://scripts/bomb.gd" type="Script" id=3]
[ext_resource path="res://Assets/images/explosionlol.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "ex",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100.753, 112.022 )

[node name="bomb" type="Area2D"]
scale = Vector2( 0.1, 0.1 )
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -7.93701, 63.496 )
shape = SubResource( 1 )

[node name="explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1.58739, 80.9575 )
scale = Vector2( 19.0964, 20.0488 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="area_entered" from="." to="." method="_on_bomb_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
